--- a/html/policeprivate.html
+++ b/html/policeprivate.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-dark bg-gradient text-white">
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">NerdHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,7 +30,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Dropdown
+                            Configurações
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -41,9 +41,6 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <!-- <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li> -->
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Pesquisar assunto" aria-label="Search">
@@ -69,63 +66,70 @@
                         site NerdHub.com ("nós", "nosso", "site"). Ao utilizar este site, você concorda em
                         cumprir e estar vinculado a estes Termos. Se você não concordar com algum dos Termos a seguir,
                         não utilize este site.</p>
-                    
+
+                </div>
             </div>
         </div>
+
+
+        <div class="container bg-white text-dark">
+        <h1>1. Informações que Coletamos</h1>
+        1.1. Informações de Identificação Pessoal
+        Podemos coletar informações de identificação pessoal, como seu nome, endereço de e-mail e outras informações
+        semelhantes quando você se inscreve em nosso site ou preenche um formulário.
+
+        <h1>1.2. Informações de Navegação</h1>
+        Podemos coletar informações sobre como você usa nosso site, incluindo os recursos que você acessa, as páginas
+        que
+        visita e o tempo gasto em nosso site.
+
+        <h1>2. Uso das Informações</h1>
+        Utilizamos as informações coletadas para os seguintes fins:
+
+        Fornecer informações sobre nossos serviços e produtos.
+        Personalizar sua experiência em nosso site.
+        Melhorar nosso site e nossos serviços.
+        Enviar e-mails informativos sobre nosso site e nossos serviços.
+        Cumprir com obrigações legais.
+
+        <h1>3. Compartilhamento de Informações</h1>
+        Não compartilharemos suas informações pessoais com terceiros, exceto nas seguintes situações:
+
+        Quando tivermos seu consentimento.
+        Para cumprir com obrigações legais.
+        Para proteger nossos direitos, privacidade, segurança ou propriedade.
+        Em caso de venda, fusão ou aquisição de todo ou parte de nossos ativos, as informações dos usuários podem ser
+        transferidas para o novo proprietário.
+        4. Cookies e Tecnologias Semelhantes
+        Utilizamos cookies e tecnologias semelhantes para melhorar a experiência do usuário em nosso site. Você pode
+        configurar seu navegador para recusar todos ou alguns cookies, mas isso pode afetar a funcionalidade do site.
+
+        <h1>5. Segurança</h1>
+        Adotamos medidas de segurança para proteger suas informações pessoais. No entanto, não podemos garantir a
+        segurança
+        completa dos dados transmitidos pela Internet.
+
+        <h1>6. Seus Direitos</h1>
+        Você tem o direito de acessar, corrigir ou excluir suas informações pessoais a qualquer momento. Entre em
+        contato
+        conosco para exercer esses direitos.
+
+        <h1>7. Menores de Idade</h1>
+        Nosso site não é direcionado a menores de idade, e não coletamos intencionalmente informações de menores de
+        idade.
+        Se soubermos que coletamos informações de um menor, tomaremos medidas para excluir essas informações.
+
+        <h1>8.Alterações a esta Política</h1>
+        Podemos atualizar esta política de privacidade periodicamente. A data da última atualização será indicada no
+        início
+        desta política.
+
+        <h1>9. Entre em Contato Conosco</h1>
+        Se tiver alguma dúvida sobre esta política de privacidade, entre em contato conosco através do seguinte endereço
+        de
+        e-mail: NerdHubContact@gmail.com.
     </div>
-
-
-
-    <h1>1. Informações que Coletamos</h1>
-    1.1. Informações de Identificação Pessoal
-    Podemos coletar informações de identificação pessoal, como seu nome, endereço de e-mail e outras informações
-    semelhantes quando você se inscreve em nosso site ou preenche um formulário.
-
-    <h1>1.2. Informações de Navegação</h1>
-    Podemos coletar informações sobre como você usa nosso site, incluindo os recursos que você acessa, as páginas que
-    visita e o tempo gasto em nosso site.
-
-    <h1>2. Uso das Informações</h1>
-    Utilizamos as informações coletadas para os seguintes fins:
-
-    Fornecer informações sobre nossos serviços e produtos.
-    Personalizar sua experiência em nosso site.
-    Melhorar nosso site e nossos serviços.
-    Enviar e-mails informativos sobre nosso site e nossos serviços.
-    Cumprir com obrigações legais.
-
-    <h1>3. Compartilhamento de Informações</h1>
-    Não compartilharemos suas informações pessoais com terceiros, exceto nas seguintes situações:
-
-    Quando tivermos seu consentimento.
-    Para cumprir com obrigações legais.
-    Para proteger nossos direitos, privacidade, segurança ou propriedade.
-    Em caso de venda, fusão ou aquisição de todo ou parte de nossos ativos, as informações dos usuários podem ser
-    transferidas para o novo proprietário.
-    4. Cookies e Tecnologias Semelhantes
-    Utilizamos cookies e tecnologias semelhantes para melhorar a experiência do usuário em nosso site. Você pode
-    configurar seu navegador para recusar todos ou alguns cookies, mas isso pode afetar a funcionalidade do site.
-
-    <h1>5. Segurança</h1>
-    Adotamos medidas de segurança para proteger suas informações pessoais. No entanto, não podemos garantir a segurança
-    completa dos dados transmitidos pela Internet.
-
-    <h1>6. Seus Direitos</h1>
-    Você tem o direito de acessar, corrigir ou excluir suas informações pessoais a qualquer momento. Entre em contato
-    conosco para exercer esses direitos.
-
-    <h1>7. Menores de Idade</h1>
-    Nosso site não é direcionado a menores de idade, e não coletamos intencionalmente informações de menores de idade.
-    Se soubermos que coletamos informações de um menor, tomaremos medidas para excluir essas informações.
-
-    <h1>8.Alterações a esta Política</h1>
-    Podemos atualizar esta política de privacidade periodicamente. A data da última atualização será indicada no início
-    desta política.
-
-    <h1>9. Entre em Contato Conosco</h1>
-    Se tiver alguma dúvida sobre esta política de privacidade, entre em contato conosco através do seguinte endereço de
-    e-mail: NerdHubContact@gmail.com.
-    </div>
+</div>
 </body>
 
 </html>
